--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -3,14 +3,14 @@ version: '>= 0.14.0'
 formatter: markdown table
 
 content: |-
-  [![Tests](https://github.com/netascode/terraform-aci-scaffolding/actions/workflows/test.yml/badge.svg)](https://github.com/netascode/terraform-aci-scaffolding/actions/workflows/test.yml)
+  [![Tests](https://github.com/netascode/terraform-aci-service-epg-policy/actions/workflows/test.yml/badge.svg)](https://github.com/netascode/terraform-aci-service-epg-policy/actions/workflows/test.yml)
 
-  # Terraform ACI Scaffolding Module
+  # Terraform ACI Service EPG Policy Module
 
   Description
 
   Location in GUI:
-  `Tenants` » `XXX`
+  `Tenants` » `XXX` » `Policies` » `Protocol` » `L4-L7 Service EPG Policy`
 
   ## Examples
 
