--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -7,7 +7,7 @@ content: |-
 
   # Terraform ACI Service EPG Policy Module
 
-  Description
+  Manages ACI Service EPG Policy
 
   Location in GUI:
   `Tenants` » `XXX` » `Policies` » `Protocol` » `L4-L7 Service EPG Policy`
